--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -12,12 +12,14 @@ images:
 releases:
   initial:
     candidate:
-      name: "4.13"
+      product: ocp
+      version: "4.13"
       namespace: ocp
   latest:
     candidate:
+      product: ocp
       include_built_images: true
-      name: "4.13"
+      version: "4.13"
       namespace: ocp
 resources:
   '*':
