--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -13,11 +13,13 @@ releases:
   initial:
     candidate:
       product: ocp
+      stream: nightly
       version: "4.13"
       namespace: ocp
   latest:
     candidate:
       product: ocp
+      stream: nightly
       include_built_images: true
       version: "4.13"
       namespace: ocp
