--- a/ci-operator/step-registry/openshift/e2e/aws/disruption/openshift-e2e-aws-disruption-workflow.yaml
+++ b/ci-operator/step-registry/openshift/e2e/aws/disruption/openshift-e2e-aws-disruption-workflow.yaml
@@ -14,4 +14,4 @@ workflow:
       TEST_UPGRADE_OPTIONS: ""
       TEST_REQUIRES_SSH: "yes"
   documentation: |-
-    The Openshift E2E AWS disruption workflow executes disruption test suite on AWS with a default cluster configuration.
+    The Openshift E2E AWS disruption workflow executes disruption test suite on AWS with a default cluster configuration. Ryan
