--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -9,20 +9,21 @@ images:
 - dockerfile_path: prow/Dockerfile
   from: os
   to: krkn-hub
+promotion:
+  namespace: ocp
+  tag: latest
 releases:
   initial:
     candidate:
       product: ocp
       stream: nightly
       version: "4.13"
-      namespace: ocp
   latest:
     candidate:
       product: ocp
       stream: nightly
       include_built_images: true
       version: "4.13"
-      namespace: ocp
 resources:
   '*':
     limits:
