--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -10,6 +10,10 @@ images:
   from: os
   to: krkn-hub
 releases:
+  initial:
+    integration:
+      name: "4.13"
+      namespace: ocp
   latest:
     candidate:
       product: ocp
@@ -40,4 +44,4 @@ tests:
 zz_generated_metadata:
   branch: main
   org: redhat-chaos
-  repo: krkn-hub 
+  repo: krkn-hub
