--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -10,10 +10,12 @@ images:
   from: os
   to: krkn-hub
 releases:
-  initial:
-    integration:
-      name: "4.13"
-      namespace: ocp
+  amd64-latest:
+    candidate:
+      architecture: amd64
+      product: ocp
+      stream: nightly
+      version: "4.13"
   latest:
     candidate:
       product: ocp
