--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -10,17 +10,12 @@ images:
   from: os
   to: krkn-hub
 releases:
-  amd64-latest:
-    candidate:
-      architecture: amd64
-      product: ocp
-      stream: nightly
-      version: "4.13"
   latest:
     candidate:
       product: ocp
       stream: nightly
       version: "4.13"
+      include_built_images: true
 resources:
   '*':
     limits:
