Try 10 adding arch type

--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -10,12 +10,17 @@ images:
   from: os
   to: krkn-hub
 releases:
+  initial:
+    integration:
+      architecture: amd64
+      name: "4.13"
+      namespace: ocp
   latest:
-    candidate:
-      product: ocp
-      stream: nightly
-      version: "4.13"
+    integration:
+      architecture: amd64
       include_built_images: true
+      name: "4.13"
+      namespace: ocp
 resources:
   '*':
     limits:
