--- a/ci-operator/config/openshift/assisted-image-service/openshift-assisted-image-service-release-ocm-2.8__mce.yaml
+++ b/ci-operator/config/openshift/assisted-image-service/openshift-assisted-image-service-release-ocm-2.8__mce.yaml
@@ -35,6 +35,7 @@ resources:
       memory: 200Mi
 tests:
 - as: publish
+  postsubmit: true
   steps:
     dependencies:
       SOURCE_IMAGE_REF: assisted-image-service
