--- a/ci-operator/config/openshift/assisted-installer-agent/openshift-assisted-installer-agent-release-ocm-2.8__mce.yaml
+++ b/ci-operator/config/openshift/assisted-installer-agent/openshift-assisted-installer-agent-release-ocm-2.8__mce.yaml
@@ -33,6 +33,7 @@ resources:
       memory: 200Mi
 tests:
 - as: publish
+  postsubmit: true
   steps:
     dependencies:
       SOURCE_IMAGE_REF: assisted-installer-agent
