--- a/ci-operator/config/openshift/assisted-installer/openshift-assisted-installer-release-ocm-2.8__mce.yaml
+++ b/ci-operator/config/openshift/assisted-installer/openshift-assisted-installer-release-ocm-2.8__mce.yaml
@@ -40,6 +40,7 @@ resources:
       memory: 200Mi
 tests:
 - as: publish
+  postsubmit: true
   steps:
     dependencies:
       SOURCE_IMAGE_REF: assisted-installer
