--- a/ci-operator/config/openshift/assisted-service/openshift-assisted-service-release-ocm-2.8__mce.yaml
+++ b/ci-operator/config/openshift/assisted-service/openshift-assisted-service-release-ocm-2.8__mce.yaml
@@ -37,6 +37,7 @@ resources:
       memory: 200Mi
 tests:
 - as: publish
+  postsubmit: true
   steps:
     dependencies:
       SOURCE_IMAGE_REF: assisted-service
