--- a/ci-operator/step-registry/hypershift/conformance/hypershift-conformance-chain.yaml
+++ b/ci-operator/step-registry/hypershift/conformance/hypershift-conformance-chain.yaml
@@ -4,6 +4,8 @@ chain:
   - as: conformance-tests
     from: tests
     commands: |-
+      echo "sleep 28800"
+      sleep 28800
       CLUSTER_NAME="$(echo -n $PROW_JOB_ID|sha256sum|cut -c-20)"
       export HYPERSHIFT_MANAGEMENT_CLUSTER_KUBECONFIG="${KUBECONFIG}"
       export HYPERSHIFT_MANAGEMENT_CLUSTER_NAMESPACE="$(echo -n clusters-${CLUSTER_NAME}|sed 's#\.#-#g')"
@@ -104,7 +106,7 @@ chain:
     - mount_path: /etc/hypershift-pool-aws-credentials
       name: hypershift-pool-aws-credentials
       namespace: test-credentials
-    timeout: 14400s
+    timeout: 8h0m0s
     env:
     - name: TEST_ARGS
       default: ""
