--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -136,6 +136,7 @@ tests:
       LVM_OPERATOR_SUB_CHANNEL: stable-4.14
       MCE_VERSION: "2.4"
     workflow: hypershift-mce-agent-conformance
+  timeout: 8h0m0s
 - as: e2e-kubevirt-conformance
   cron: 0 4 * * *
   steps:
