--- a/ci-operator/step-registry/rosa/cluster/provision/rosa-cluster-provision-chain.yaml
+++ b/ci-operator/step-registry/rosa/cluster/provision/rosa-cluster-provision-chain.yaml
@@ -3,6 +3,7 @@ chain:
   steps:
   - ref: rosa-cluster-provision
   - ref: rosa-conf-idp-htpasswd
+  - ref: cucushift-hypershift-extended-debug
   - ref: rosa-cluster-wait-ready-operators
   documentation: |-
     This chain installs a rosa cluster. The cluster is configured with the HTPasswd IDP, 
