add wait step for testing

--- a/ci-operator/config/quay/quay-tests/quay-quay-tests-master.yaml
+++ b/ci-operator/config/quay/quay-tests/quay-quay-tests-master.yaml
@@ -70,6 +70,7 @@ tests:
     - chain: quay-tests-quay-e2e-test
     - ref: quay-tests-qbo-qe-test
     - ref: quay-tests-cso-qe-test
+    - ref: wait
     workflow: cucushift-installer-rehearse-aws-ipi
 - as: quay-e2e-tests-quay39-ocp414-aws-s3
   cron: 0 12 * * 5
