add wait step for testing

--- a/ci-operator/config/quay/quay-tests/quay-quay-tests-master.yaml
+++ b/ci-operator/config/quay/quay-tests/quay-quay-tests-master.yaml
@@ -94,6 +94,7 @@ tests:
     test:
     - ref: quay-tests-deploy-quay-azure
     - ref: quay-tests-test-quay-e2e
+    - ref: wait
     workflow: cucushift-installer-rehearse-aws-ipi
 - as: quay-e2e-tests-quay39-ocp414-gcp
   cron: 0 12 * * 5
