--- a/ci-operator/config/skupperproject/skupper-openshift-smoke-test-image/skupperproject-skupper-openshift-smoke-test-image-main__service-interconnect-ocp4.14-lp-interop.yaml
+++ b/ci-operator/config/skupperproject/skupper-openshift-smoke-test-image/skupperproject-skupper-openshift-smoke-test-image-main__service-interconnect-ocp4.14-lp-interop.yaml
@@ -9,7 +9,8 @@ build_root:
     namespace: openshift
     tag: golang-1.19
 images:
-- dockerfile_literal: FROM quay.io/rhsi/smoke-test-image
+- context_dir: .
+  dockerfile_path: Dockerfile
   to: rhsi-test-runner
 releases:
   latest:
@@ -24,7 +25,7 @@ resources:
       memory: 200Mi
 tests:
 - as: rhsi-interop-aws
-  cron: 0 1 * * 1
+  cron: 0 6 25 12 *
   steps:
     cluster_profile: aws-cspi-qe
     env:
@@ -46,6 +47,6 @@ tests:
     workflow: firewatch-ipi-aws
 zz_generated_metadata:
   branch: main
-  org: rhpit
-  repo: interop-tests
+  org: skupperproject
+  repo: skupper-openshift-smoke-test-image
   variant: service-interconnect-ocp4.14-lp-interop
