--- a/core-services/sanitize-prow-jobs/_config.yaml
+++ b/core-services/sanitize-prow-jobs/_config.yaml
@@ -15647,7 +15647,6 @@ groups:
     - release-openshift-origin-installer-launch-azure
     - release-openshift-origin-installer-launch-gcp
     - release-openshift-origin-installer-launch-vsphere
-    - branch-ci-openshift-ci-tools-master-images
     - release-openshift-ocp-installer-e2e-metal-4.2
     - release-openshift-ocp-installer-e2e-metal-4.3
     - release-openshift-ocp-installer-e2e-metal-4.4
@@ -15669,6 +15668,14 @@ groups:
     paths:
     - openshift-openshift-azure-infra-periodics.yaml
     - infra-periodics-origin-release-images.yaml
+  build03:
+    jobs:
+    - periodic-ipi-deprovision-aws
+    - periodic-ipi-deprovision-aws-2
+    - periodic-ipi-deprovision-aws-3
+    - periodic-ipi-deprovision-gcp
+    - periodic-ipi-deprovision-gcp-2
+    - periodic-openshift-dptp-3312-hypershift-leaks-cleaner
   build05:
     jobs:
     - release-openshift-origin-installer-launch-metal
