--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -22,7 +22,7 @@ periodics:
           cpu: 500m
     serviceAccountName: clonerefs-manager
 - agent: kubernetes
-  cluster: build01
+  cluster: app.ci
   cron: 30 7 * * *
   decorate: true
   labels:
@@ -793,7 +793,7 @@ periodics:
         name: labels
       name: config
 - agent: kubernetes
-  cluster: build01
+  cluster: app.ci
   decorate: true
   decoration_config:
     timeout: 8h0m0s
@@ -845,7 +845,7 @@ periodics:
           path: .awscred
         secretName: cluster-secrets-aws
 - agent: kubernetes
-  cluster: build01
+  cluster: app.ci
   decorate: true
   decoration_config:
     timeout: 8h0m0s
@@ -897,7 +897,7 @@ periodics:
           path: .awscred
         secretName: cluster-secrets-aws-2
 - agent: kubernetes
-  cluster: build01
+  cluster: app.ci
   decorate: true
   decoration_config:
     timeout: 8h0m0s
@@ -949,7 +949,7 @@ periodics:
           path: .awscred
         secretName: cluster-secrets-aws-3
 - agent: kubernetes
-  cluster: build01
+  cluster: app.ci
   decorate: true
   decoration_config:
     timeout: 8h0m0s
@@ -1004,7 +1004,7 @@ periodics:
           path: gce.json
         secretName: cluster-secrets-gcp
 - agent: kubernetes
-  cluster: build01
+  cluster: app.ci
   decorate: true
   decoration_config:
     timeout: 8h0m0s
@@ -2866,7 +2866,7 @@ periodics:
         requests:
           cpu: 500m
 - agent: kubernetes
-  cluster: build01
+  cluster: app.ci
   cron: '@daily'
   decorate: true
   name: periodic-openshift-dptp-3312-hypershift-leaks-cleaner
