--- a/ci-operator/config/stackrox/stackrox/stackrox-stackrox-master__ocp-4-14.yaml
+++ b/ci-operator/config/stackrox/stackrox/stackrox-stackrox-master__ocp-4-14.yaml
@@ -23,6 +23,7 @@ test_binary_build_commands: .openshift-ci/dispatch.sh test-binary-build-commands
 tests:
 - as: qa-e2e-tests
   optional: true
+  always_run: false
   steps:
     cluster_profile: aws
     env:
@@ -34,6 +35,7 @@ tests:
   timeout: 5h0m0s
 - as: ebpf-qa-e2e-tests
   optional: true
+  always_run: false
   steps:
     cluster_profile: aws
     env:
@@ -45,6 +47,7 @@ tests:
   timeout: 5h0m0s
 - as: operator-e2e-tests
   optional: true
+  always_run: false
   steps:
     cluster_profile: aws
     env:
@@ -55,6 +58,7 @@ tests:
   timeout: 5h0m0s
 - as: sensor-integration-tests
   optional: true
+  always_run: false
   steps:
     cluster_profile: aws
     env:
@@ -66,6 +70,7 @@ tests:
   timeout: 5h0m0s
 - as: ui-e2e-tests
   optional: true
+  always_run: false
   steps:
     cluster_profile: aws
     env:
@@ -77,6 +82,7 @@ tests:
   timeout: 5h0m0s
 - as: compliance-e2e-tests
   optional: true
+  always_run: false
   steps:
     cluster_profile: aws
     env:
