--- a/ci-operator/config/openshift/distributed-tracing-qe/openshift-distributed-tracing-qe-main.yaml
+++ b/ci-operator/config/openshift/distributed-tracing-qe/openshift-distributed-tracing-qe-main.yaml
@@ -32,6 +32,7 @@ tests:
     product: ocp
     timeout: 3h0m0s
     version: "4.13"
+  cron: 0 6 * * 0
   steps:
     env:
       EO_SUB_CHANNEL: stable-5.7
