[WIP] GCP: Authenticate using Service Account on a GCP VM

--- a/ci-operator/step-registry/gcp/provision/bastionhost/gcp-provision-bastionhost-ref.yaml
+++ b/ci-operator/step-registry/gcp/provision/bastionhost/gcp-provision-bastionhost-ref.yaml
@@ -23,5 +23,11 @@ ref:
     default: "no"
     documentation: |-
       Register DNS for mirror registry.
+  - name: ATTACH_SA
+    default: "no"
+    documentation: Whether to attach a service-account along with specifying scopes.
+  - name: BASTION_SA
+    default: "ipi-on-bastion-sa@openshift-qe.iam.gserviceaccount.com"
+    documentation: The service-account to be attached to bastion host.
   documentation: |-
     The step launches Linux bastion host within the CONTROL_PLANE_SUBNET.
