Enable hypershift-hostedcluster-powervs clusters via workflow-launch

--- a/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
@@ -2778,14 +2778,15 @@ periodics:
       secret:
         secretName: result-aggregator
 - agent: kubernetes
-  cluster: build05
-  cron: '@yearly'
+  cluster: build01
+  cron: 0 4 * * *
   decorate: true
   labels:
     config-type: modern
     job-architecture: amd64
     job-env: hypershift-hosted
     job-type: launch
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
   name: release-openshift-origin-installer-launch-hypershift-hosted
   spec:
     containers:
