--- a/core-services/ci-chat-bot/workflows-config.yaml
+++ b/core-services/ci-chat-bot/workflows-config.yaml
@@ -291,6 +291,8 @@ workflows:
     platform: aws
   hypershift-hostedcluster-workflow:
     platform: aws-2
+  hypershift-hostedcluster-powervs-workflow:
+    platform: aws-2
   opct-test-platform-none-vsphere:
     platform: vsphere
   openshift-e2e-aws:
