Update aws region to support hypershift

--- a/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__hypershift-test-operator-ocp4.13-lp-interop.yaml
+++ b/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__hypershift-test-operator-ocp4.13-lp-interop.yaml
@@ -36,7 +36,7 @@ tests:
   steps:
     cluster_profile: aws-cspi-qe
     env:
-      CLUSTER1_CONFIG: name=hypr;platform=hypershift;region=us-east-2;version=4.13;channel-group=stable;compute-machine-type=m5.4xlarge;timeout=90m;replicas=6;fips=false;ocm-env=stage
+      CLUSTER1_CONFIG: name=hypr;platform=hypershift;region=us-west-2;version=4.13;channel-group=stable;compute-machine-type=m5.4xlarge;timeout=90m;replicas=6;fips=false;ocm-env=stage
       FIREWATCH_CONFIG: |
         [
           {"step": "operator-install", "failure_type": "all", "classification": "Provisioning - Operators", "jira_project": "LPTOCPCI"},
