Switch to using image_stream_tag with stackrox-test-0.3.60

--- a/ci-operator/config/stackrox/stackrox/stackrox-stackrox-update-ci-image-from-189.yaml
+++ b/ci-operator/config/stackrox/stackrox/stackrox-stackrox-update-ci-image-from-189.yaml
@@ -24,8 +24,10 @@ base_images:
     namespace: ocp
     tag: "8"
 build_root:
-  project_image:
-    dockerfile_path: .openshift-ci/Dockerfile.build_root
+  image_stream_tag:
+    name: apollo-ci
+    namespace: stackrox
+    tag: stackrox-test-0.3.60
 releases:
   latest:
     release:
