--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.12-latestCandidate-x86-loaded-upgrade-from-4.12.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.12-latestCandidate-x86-loaded-upgrade-from-4.12.yaml
@@ -45,4 +45,4 @@ zz_generated_metadata:
   branch: main
   org: openshift-qe
   repo: ocp-qe-perfscale-ci
-  variant: rosa-latest-candidate-4.12-loaded-upgrade-from-4.12
+  variant: rosa-4.12-latestCandidate-x86-loaded-upgrade-from-4.12
