More renaming of files, adding missing tests and changing non cluster-density cron tests to non cron for 4.12 nightly

--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__gcp-4.12-nightly-x86.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__gcp-4.12-nightly-x86.yaml
@@ -34,8 +34,8 @@ tests:
     - chain: workers-scale
     - chain: create-infra-move-ingress-monitoring-registry
     workflow: openshift-qe-control-plane
-- as: perfscale-gcp-router-perf-5nodes-periodic
-  cron: 0 9 * * 4
+- always_run: false
+  as: perfscale-gcp-router-perf-5nodes
   steps:
     cluster_profile: gcp-qe
     env:
@@ -47,8 +47,8 @@ tests:
     - chain: workers-scale
     - chain: create-infra-move-ingress-monitoring-registry
     workflow: openshift-qe-router-perf
-- as: perfscale-gcp-node-density-heavy-5nodes-periodic
-  cron: 0 12 * * 1
+- always_run: false
+  as: perfscale-gcp-node-density-heavy-5nodes
   steps:
     cluster_profile: gcp-qe
     env:
@@ -60,8 +60,8 @@ tests:
     - chain: workers-scale
     - chain: create-infra-move-ingress-monitoring-registry
     workflow: openshift-qe-node-density-heavy
-- as: perfscale-gcp-network-policy-5nodes-periodic
-  cron: 0 12 * * 1
+- always_run: false
+  as: perfscale-gcp-network-policy-5nodes
   steps:
     cluster_profile: gcp-qe
     env:
@@ -78,3 +78,4 @@ zz_generated_metadata:
   branch: main
   org: openshift-qe
   repo: ocp-qe-perfscale-ci
+  variant: gcp-4.12-nightly-x86
