--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__gcp-4.13-nightly-x86.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__gcp-4.13-nightly-x86.yaml
@@ -48,18 +48,18 @@ tests:
     - chain: workers-scale
     workflow: openshift-qe-data-path-tests
   timeout: 5h0m0s
-- always_run: false
-  as: perfscale-gcp-router-perf-24nodes
+- as: perfscale-gcp-router-perf-5nodes-periodic
+  cron: 0 9 * * 4
   steps:
     cluster_profile: gcp-qe
     env:
-      WORKER_REPLICA_COUNT: "24"
+      WORKER_REPLICA_COUNT: "5"
     post:
     - chain: ipi-gcp-post
     pre:
     - chain: ipi-gcp-pre
-    - chain: create-infra-move-ingress-monitoring-registry
     - chain: workers-scale
+    - chain: create-infra-move-ingress-monitoring-registry
     workflow: openshift-qe-router-perf
 - as: perfscale-gcp-node-density-cni-24nodes-periodic
   cron: 0 12 * * 1
@@ -87,6 +87,36 @@ tests:
     - chain: create-infra-move-ingress-monitoring-registry
     - chain: workers-scale
     workflow: openshift-qe-node-density-heavy
+- as: perfscale-rosa-multiaz-data-path-9nodes-periodic
+  cron: 0 8 * * 1
+  steps:
+    cluster_profile: aws-perfscale-qe
+    env:
+      CHANNEL_GROUP: nightly
+      COMPUTE_MACHINE_TYPE: m5.xlarge
+      CONFIG: config/standard-classic-rosa.yml
+      ENABLE_AUTOSCALING: "false"
+      MULTI_AZ: "true"
+      OPENSHIFT_VERSION: "4.12"
+      REPLICAS: "9"
+    test:
+    - chain: openshift-qe-data-path-tests
+    workflow: rosa-aws-sts
+  timeout: 5h0m0s
+- as: perfscale-gcp-network-policy-5nodes-periodic
+  cron: 29 5 */1 * 1-5
+  steps:
+    cluster_profile: gcp-qe
+    env:
+      WORKER_REPLICA_COUNT: "5"
+    post:
+    - chain: ipi-gcp-post
+    pre:
+    - chain: ipi-gcp-pre
+    - chain: workers-scale
+    - chain: create-infra-move-ingress-monitoring-registry
+    workflow: openshift-qe-network-policy
+  timeout: 8h0m0s
 zz_generated_metadata:
   branch: main
   org: openshift-qe
