--- a/ci-operator/jobs/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main-postsubmits.yaml
+++ b/ci-operator/jobs/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main-postsubmits.yaml
@@ -409,6 +409,63 @@ postsubmits:
       skip_cloning: true
     labels:
       ci-operator.openshift.io/is-promotion: "true"
+      ci-operator.openshift.io/variant: aws-4.14-nightly-x86-ovnic
+      ci.openshift.io/generator: prowgen
+      job-release: "4.14"
+    max_concurrency: 1
+    name: branch-ci-openshift-qe-ocp-qe-perfscale-ci-main-aws-4.14-nightly-x86-ovnic-images
+    spec:
+      containers:
+      - args:
+        - --gcs-upload-secret=/secrets/gcs/service-account.json
+        - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+        - --image-mirror-push-secret=/etc/push-secret/.dockerconfigjson
+        - --promote
+        - --report-credentials-file=/etc/report/credentials
+        - --target=[images]
+        - --variant=aws-4.14-nightly-x86-ovnic
+        command:
+        - ci-operator
+        image: ci-operator:latest
+        imagePullPolicy: Always
+        name: ""
+        resources:
+          requests:
+            cpu: 10m
+        volumeMounts:
+        - mountPath: /secrets/gcs
+          name: gcs-credentials
+          readOnly: true
+        - mountPath: /etc/pull-secret
+          name: pull-secret
+          readOnly: true
+        - mountPath: /etc/push-secret
+          name: push-secret
+          readOnly: true
+        - mountPath: /etc/report
+          name: result-aggregator
+          readOnly: true
+      serviceAccountName: ci-operator
+      volumes:
+      - name: pull-secret
+        secret:
+          secretName: registry-pull-credentials
+      - name: push-secret
+        secret:
+          secretName: registry-push-credentials-ci-central
+      - name: result-aggregator
+        secret:
+          secretName: result-aggregator
+  - agent: kubernetes
+    always_run: true
+    branches:
+    - ^main$
+    cluster: build04
+    decorate: true
+    decoration_config:
+      skip_cloning: true
+    labels:
+      ci-operator.openshift.io/is-promotion: "true"
       ci-operator.openshift.io/variant: aws-4.14-nightly-x86-sno
       ci.openshift.io/generator: prowgen
       job-release: "4.14"
@@ -466,11 +523,11 @@ postsubmits:
       skip_cloning: true
     labels:
       ci-operator.openshift.io/is-promotion: "true"
-      ci-operator.openshift.io/variant: aws-4.14-ovnic
+      ci-operator.openshift.io/variant: gcp-4.12-nightly-x86
       ci.openshift.io/generator: prowgen
-      job-release: "4.14"
+      job-release: "4.12"
     max_concurrency: 1
-    name: branch-ci-openshift-qe-ocp-qe-perfscale-ci-main-aws-4.14-ovnic-images
+    name: branch-ci-openshift-qe-ocp-qe-perfscale-ci-main-gcp-4.12-nightly-x86-images
     spec:
       containers:
       - args:
@@ -480,7 +537,7 @@ postsubmits:
         - --promote
         - --report-credentials-file=/etc/report/credentials
         - --target=[images]
-        - --variant=aws-4.14-ovnic
+        - --variant=gcp-4.12-nightly-x86
         command:
         - ci-operator
         image: ci-operator:latest
@@ -580,10 +637,10 @@ postsubmits:
       skip_cloning: true
     labels:
       ci-operator.openshift.io/is-promotion: "true"
+      ci-operator.openshift.io/variant: rosa-4.12-candidate-x86-loaded-upgrade-from-4.12
       ci.openshift.io/generator: prowgen
-      job-release: "4.12"
     max_concurrency: 1
-    name: branch-ci-openshift-qe-ocp-qe-perfscale-ci-main-images
+    name: branch-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-4.12-candidate-x86-loaded-upgrade-from-4.12-images
     spec:
       containers:
       - args:
@@ -593,6 +650,7 @@ postsubmits:
         - --promote
         - --report-credentials-file=/etc/report/credentials
         - --target=[images]
+        - --variant=rosa-4.12-candidate-x86-loaded-upgrade-from-4.12
         command:
         - ci-operator
         image: ci-operator:latest
@@ -635,10 +693,10 @@ postsubmits:
       skip_cloning: true
     labels:
       ci-operator.openshift.io/is-promotion: "true"
-      ci-operator.openshift.io/variant: rosa-4.12-latestCandidate-x86-loaded-upgrade-from-4.12
+      ci-operator.openshift.io/variant: rosa-4.13-candidate-x86-loaded-upgrade-from-4.12
       ci.openshift.io/generator: prowgen
     max_concurrency: 1
-    name: branch-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-4.12-latestCandidate-x86-loaded-upgrade-from-4.12-images
+    name: branch-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-4.13-candidate-x86-loaded-upgrade-from-4.12-images
     spec:
       containers:
       - args:
@@ -648,63 +706,7 @@ postsubmits:
         - --promote
         - --report-credentials-file=/etc/report/credentials
         - --target=[images]
-        - --variant=rosa-4.12-latestCandidate-x86-loaded-upgrade-from-4.12
-        command:
-        - ci-operator
-        image: ci-operator:latest
-        imagePullPolicy: Always
-        name: ""
-        resources:
-          requests:
-            cpu: 10m
-        volumeMounts:
-        - mountPath: /secrets/gcs
-          name: gcs-credentials
-          readOnly: true
-        - mountPath: /etc/pull-secret
-          name: pull-secret
-          readOnly: true
-        - mountPath: /etc/push-secret
-          name: push-secret
-          readOnly: true
-        - mountPath: /etc/report
-          name: result-aggregator
-          readOnly: true
-      serviceAccountName: ci-operator
-      volumes:
-      - name: pull-secret
-        secret:
-          secretName: registry-pull-credentials
-      - name: push-secret
-        secret:
-          secretName: registry-push-credentials-ci-central
-      - name: result-aggregator
-        secret:
-          secretName: result-aggregator
-  - agent: kubernetes
-    always_run: true
-    branches:
-    - ^main$
-    cluster: build04
-    decorate: true
-    decoration_config:
-      skip_cloning: true
-    labels:
-      ci-operator.openshift.io/is-promotion: "true"
-      ci-operator.openshift.io/variant: rosa-4.13-latestCandidate-x86-loaded-upgrade-from-4.12
-      ci.openshift.io/generator: prowgen
-    max_concurrency: 1
-    name: branch-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-4.13-latestCandidate-x86-loaded-upgrade-from-4.12-images
-    spec:
-      containers:
-      - args:
-        - --gcs-upload-secret=/secrets/gcs/service-account.json
-        - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
-        - --image-mirror-push-secret=/etc/push-secret/.dockerconfigjson
-        - --promote
-        - --report-credentials-file=/etc/report/credentials
-        - --target=[images]
-        - --variant=rosa-4.13-latestCandidate-x86-loaded-upgrade-from-4.12
+        - --variant=rosa-4.13-candidate-x86-loaded-upgrade-from-4.12
         command:
         - ci-operator
         image: ci-operator:latest
