--- a/core-services/ci-secret-bootstrap/_config.yaml
+++ b/core-services/ci-secret-bootstrap/_config.yaml
@@ -2395,6 +2395,12 @@ secret_configs:
     sa.crier.arm01.token.txt:
       field: sa.crier.arm01.token.txt
       item: build_farm
+    sa.crier.build01.config:
+      field: sa.crier.build01.config
+      item: build_farm
+    sa.crier.build01.token.txt:
+      field: sa.crier.build01.token.txt
+      item: build_farm
     sa.crier.build02.config:
       field: sa.crier.build02.config
       item: build_farm
@@ -2454,6 +2460,9 @@ secret_configs:
     sa.config-updater.arm01.config:
       field: sa.config-updater.arm01.config
       item: config-updater
+    sa.config-updater.build01.config:
+      field: sa.config-updater.build01.config
+      item: config-updater
     sa.config-updater.build02.config:
       field: sa.config-updater.build02.config
       item: config-updater
@@ -2500,6 +2509,12 @@ secret_configs:
       item: build_farm
     sa.deck.arm01.token.txt:
       field: sa.deck.arm01.token.txt
+      item: build_farm
+    sa.deck.build01.config:
+      field: sa.deck.build01.config
+      item: build_farm
+    sa.deck.build01.token.txt:
+      field: sa.deck.build01.token.txt
       item: build_farm
     sa.deck.build02.config:
       field: sa.deck.build02.config
@@ -2566,6 +2581,12 @@ secret_configs:
     sa.hook.arm01.token.txt:
       field: sa.hook.arm01.token.txt
       item: build_farm
+    sa.hook.build01.config:
+      field: sa.hook.build01.config
+      item: build_farm
+    sa.hook.build01.token.txt:
+      field: sa.hook.build01.token.txt
+      item: build_farm
     sa.hook.build02.config:
       field: sa.hook.build02.config
       item: build_farm
@@ -2631,6 +2652,12 @@ secret_configs:
     sa.prow-controller-manager.arm01.token.txt:
       field: sa.prow-controller-manager.arm01.token.txt
       item: build_farm
+    sa.prow-controller-manager.build01.config:
+      field: sa.prow-controller-manager.build01.config
+      item: build_farm
+    sa.prow-controller-manager.build01.token.txt:
+      field: sa.prow-controller-manager.build01.token.txt
+      item: build_farm
     sa.prow-controller-manager.build02.config:
       field: sa.prow-controller-manager.build02.config
       item: build_farm
@@ -2684,6 +2711,12 @@ secret_configs:
     name: prow-controller-manager
     namespace: ci
 - from:
+    sa.sprint-automation.build01.config:
+      field: sa.sprint-automation.build01.config
+      item: build_farm
+    sa.sprint-automation.build01.token.txt:
+      field: sa.sprint-automation.build01.token.txt
+      item: build_farm
     sa.sprint-automation.build02.config:
       field: sa.sprint-automation.build02.config
       item: build_farm
@@ -2706,6 +2739,12 @@ secret_configs:
       item: build_farm
     sa.sinker.arm01.token.txt:
       field: sa.sinker.arm01.token.txt
+      item: build_farm
+    sa.sinker.build01.config:
+      field: sa.sinker.build01.config
+      item: build_farm
+    sa.sinker.build01.token.txt:
+      field: sa.sinker.build01.token.txt
       item: build_farm
     sa.sinker.build02.config:
       field: sa.sinker.build02.config
@@ -2766,6 +2805,12 @@ secret_configs:
     sa.dptp-controller-manager.arm01.token.txt:
       field: sa.dptp-controller-manager.arm01.token.txt
       item: build_farm
+    sa.dptp-controller-manager.build01.config:
+      field: sa.dptp-controller-manager.build01.config
+      item: build_farm
+    sa.dptp-controller-manager.build01.token.txt:
+      field: sa.dptp-controller-manager.build01.token.txt
+      item: build_farm
     sa.dptp-controller-manager.build02.config:
       field: sa.dptp-controller-manager.build02.config
       item: build_farm
@@ -2819,6 +2864,12 @@ secret_configs:
     name: dptp-controller-manager
     namespace: ci
 - from:
+    sa.promoted-image-governor.build01.config:
+      field: sa.promoted-image-governor.build01.config
+      item: build_farm
+    sa.promoted-image-governor.build01.token.txt:
+      field: sa.promoted-image-governor.build01.token.txt
+      item: build_farm
     sa.promoted-image-governor.build02.config:
       field: sa.promoted-image-governor.build02.config
       item: build_farm
@@ -2890,6 +2941,12 @@ secret_configs:
     sa.ci-operator.arm01.token.txt:
       field: sa.ci-operator.arm01.token.txt
       item: build_farm
+    sa.ci-operator.build01.config:
+      field: sa.ci-operator.build01.config
+      item: build_farm
+    sa.ci-operator.build01.token.txt:
+      field: sa.ci-operator.build01.token.txt
+      item: build_farm
     sa.ci-operator.build02.config:
       field: sa.ci-operator.build02.config
       item: build_farm
@@ -2956,6 +3013,12 @@ secret_configs:
     sa.ci-chat-bot.arm01.token.txt:
       field: sa.ci-chat-bot.arm01.token.txt
       item: ci-chat-bot
+    sa.ci-chat-bot.build01.config:
+      field: sa.ci-chat-bot.build01.config
+      item: ci-chat-bot
+    sa.ci-chat-bot.build01.token.txt:
+      field: sa.ci-chat-bot.build01.token.txt
+      item: ci-chat-bot
     sa.ci-chat-bot.build02.config:
       field: sa.ci-chat-bot.build02.config
       item: ci-chat-bot
@@ -3020,6 +3083,12 @@ secret_configs:
       item: build_farm
     sa.github-ldap-user-group-creator.arm01.token.txt:
       field: sa.github-ldap-user-group-creator.arm01.token.txt
+      item: build_farm
+    sa.github-ldap-user-group-creator.build01.config:
+      field: sa.github-ldap-user-group-creator.build01.config
+      item: build_farm
+    sa.github-ldap-user-group-creator.build01.token.txt:
+      field: sa.github-ldap-user-group-creator.build01.token.txt
       item: build_farm
     sa.github-ldap-user-group-creator.build02.config:
       field: sa.github-ldap-user-group-creator.build02.config
@@ -3966,6 +4035,12 @@ secret_configs:
       item: build_farm
     sa.cluster-display.arm01.token.txt:
       field: sa.cluster-display.arm01.token.txt
+      item: build_farm
+    sa.cluster-display.build01.config:
+      field: sa.cluster-display.build01.config
+      item: build_farm
+    sa.cluster-display.build01.token.txt:
+      field: sa.cluster-display.build01.token.txt
       item: build_farm
     sa.cluster-display.build02.config:
       field: sa.cluster-display.build02.config
