Run e2e-kubevirt-aws-ovn on us-east-1 region due to AZ requirements for HA
When testing highly available hosted clusters on AWS, it is required to run on a region that contains at least 3 availability zones, so each control plane component replica runs in a different AZ. us-west-1 and us-west-2 have only 2 AZs. With this change the job will run in a region that has >=3 AZs

Signed-off-by: Oren Cohen <ocohen@redhat.com>

--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -142,6 +142,9 @@ tests:
     env:
       CNV_PRERELEASE_VERSION: "4.14"
       ENABLE_HYPERSHIFT_OPERATOR_DEFAULTING_WEBHOOK: "true"
+    leases:
+    - env: LEASED_RESOURCE
+      resource_type: aws-3-quota-slice
     workflow: hypershift-kubevirt-conformance
 - as: e2e-kubevirt-mce-conformance
   cron: 0 4 * * *
@@ -150,6 +153,9 @@ tests:
     env:
       CNV_PRERELEASE_VERSION: "4.14"
       MCE_VERSION: "2.4"
+    leases:
+    - env: LEASED_RESOURCE
+      resource_type: aws-3-quota-slice
     workflow: hypershift-mce-kubevirt-conformance
 - as: e2e-kubevirt-baremetalds-conformance
   cron: 0 8 * * *
