--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -10,15 +10,11 @@ images:
   from: os
   to: krkn-hub
 releases:
-  initial:
-    integration:
-      name: "4.13"
-      namespace: ocp
   latest:
-    integration:
-      include_built_images: true
-      name: "4.13"
-      namespace: ocp
+    candidate:
+      product: ocp
+      stream: nightly
+      version: "4.13"
 resources:
   '*':
     limits:
@@ -38,9 +34,11 @@ tests:
     pre:
     - chain: ipi-aws-pre
     - chain: create-infra-move-ingress-monitoring-registry
-    test:
-    - chain: redhat-chaos-krkn-hub-tests
-    - chain: redhat-chaos-hog-scenarios
+    workflow: redhat-chaos-krkn-hub-tests
+    workflow: redhat-chaos-hog-scenarios
+    # test:
+    # - chain: redhat-chaos-krkn-hub-tests
+    # - chain: redhat-chaos-hog-scenarios
 zz_generated_metadata:
   branch: main
   org: redhat-chaos
