--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -10,10 +10,14 @@ images:
   from: os
   to: krkn-hub
 releases:
-  latest:
+  initial:
     candidate:
       product: ocp
       stream: nightly
+      version: "4.13"
+  latest:
+    release:
+      channel: fast
       version: "4.13"
 resources:
   '*':
