--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.12-nightly-x86.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.12-nightly-x86.yaml
@@ -21,7 +21,7 @@ resources:
       cpu: 100m
       memory: 200Mi
 tests:
-- as: perfscale-rosa-multiaz-cluster-density-v2-24nodes-periodic
+- as: perfscale-rosa-multiaz-control-plane-24nodes-periodic
   cron: 0 8 * * 4
   steps:
     cluster_profile: aws-perfscale-qe
@@ -33,7 +33,7 @@ tests:
       OPENSHIFT_VERSION: "4.12"
       REPLICAS: "24"
     test:
-    - ref: openshift-qe-cluster-density-v2
+    - chain: openshift-qe-control-plane
     workflow: rosa-aws-sts
 - always_run: false
   as: perfscale-rosa-multiaz-cluster-density-v2-3nodes
