[o/cert-manager-operator] Protect branch cert-manager-1.12
Signed-off-by: Swarup Ghosh <swghosh@redhat.com>

--- a/core-services/prow/02_config/openshift/cert-manager-operator/_prowconfig.yaml
+++ b/core-services/prow/02_config/openshift/cert-manager-operator/_prowconfig.yaml
@@ -4,6 +4,8 @@ branch-protection:
       repos:
         cert-manager-operator:
           branches:
+            cert-manager-1.12:
+              protect: true
             cert-manager-1.11:
               protect: true
             cert-manager-v1.10.x:
