Refactor'd on the most recent changes
Signed-off-by: Krishna Harsha Voora <krvoora@redhat.com>

--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.13-nightly-x86.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.13-nightly-x86.yaml
@@ -253,6 +253,36 @@ tests:
     - chain: openshift-qe-hypershift-infra
     - chain: openshift-qe-data-path-tests
     workflow: rosa-aws-sts-hypershift-mp
+- as: perfscale-rosa-sdn-to-ovn-24nodes-periodic
+  cron: 0 7 1-31/14 * *
+  steps:
+    cluster_profile: aws-perfscale-qe
+    env:
+      CHANNEL_GROUP: nightly
+      COMPUTE_MACHINE_TYPE: m5.xlarge
+      ENABLE_AUTOSCALING: "false"
+      MULTI_AZ: "true"
+      OPENSHIFT_VERSION: "4.13"
+      REPLICAS: "24"
+    test:
+    - ref: openshift-qe-cluster-density-v2
+    - ref: ovn-sdn-migration
+    workflow: rosa-aws-sts
+- as: perfscale-rosa-sdn-to-ovn-120nodes-periodic
+  cron: 0 18 1-31/14 * *
+  steps:
+    cluster_profile: aws-perfscale-qe
+    env:
+      CHANNEL_GROUP: nightly
+      COMPUTE_MACHINE_TYPE: m5.xlarge
+      ENABLE_AUTOSCALING: "false"
+      MULTI_AZ: "true"
+      OPENSHIFT_VERSION: "4.13"
+      REPLICAS: "120"
+    test:
+    - ref: openshift-qe-cluster-density-v2
+    - ref: ovn-sdn-migration
+    workflow: rosa-aws-sts
 zz_generated_metadata:
   branch: main
   org: openshift-qe
