--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.12-nightly-x86.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.12-nightly-x86.yaml
@@ -81,6 +81,36 @@ tests:
     - chain: openshift-qe-data-path-tests
     workflow: rosa-aws-sts
   timeout: 5h0m0s
+- as: perfscale-rosa-sdn-to-ovn-24nodes-periodic
+  cron: 0 6 1-31/14 * *
+  steps:
+    cluster_profile: aws-perfscale-qe
+    env:
+      CHANNEL_GROUP: nightly
+      COMPUTE_MACHINE_TYPE: m5.xlarge
+      ENABLE_AUTOSCALING: "false"
+      MULTI_AZ: "true"
+      OPENSHIFT_VERSION: "4.12"
+      REPLICAS: "24"
+    test:
+    - ref: openshift-qe-cluster-density-v2
+    - ref: ovn-sdn-migration
+    workflow: rosa-aws-sts
+- as: perfscale-rosa-sdn-to-ovn-120nodes-periodic
+  cron: 0 16 1-31/14 * *
+  steps:
+    cluster_profile: aws-perfscale-qe
+    env:
+      CHANNEL_GROUP: nightly
+      COMPUTE_MACHINE_TYPE: m5.xlarge
+      ENABLE_AUTOSCALING: "false"
+      MULTI_AZ: "true"
+      OPENSHIFT_VERSION: "4.12"
+      REPLICAS: "120"
+    test:
+    - ref: openshift-qe-cluster-density-v2
+    - ref: ovn-sdn-migration
+    workflow: rosa-aws-sts
 zz_generated_metadata:
   branch: main
   org: openshift-qe
