change configuration job for testing new runner

--- a/ci-operator/config/devfile/devworkspace-operator/devfile-devworkspace-operator-main__v8.yaml
+++ b/ci-operator/config/devfile/devworkspace-operator/devfile-devworkspace-operator-main__v8.yaml
@@ -59,7 +59,7 @@ tests:
           memory: 200Mi
     workflow: ipi-aws
 zz_generated_metadata:
-  branch: fix-using-chectl-with-go-on-runner-image
+  branch: main
   org: devfile
   repo: devworkspace-operator
   variant: v8
