set gcp-arm64 profile updated one.
Signed-off-by: Saravanakumar Arumugam <sarumuga@redhat.com>

--- a/ci-operator/config/openshift/multiarch/openshift-multiarch-master__nightly-4.14.yaml
+++ b/ci-operator/config/openshift/multiarch/openshift-multiarch-master__nightly-4.14.yaml
@@ -576,7 +576,7 @@ tests:
 - as: ocp-e2e-gcp-ovn-arm64
   cron: 0 11 * * 0
   steps:
-    cluster_profile: gcp
+    cluster_profile: gcp-arm64
     dependencies:
       OPENSHIFT_INSTALL_RELEASE_IMAGE_OVERRIDE: release:arm64-latest
     env:
