--- a/core-services/ci-secret-bootstrap/_config.yaml
+++ b/core-services/ci-secret-bootstrap/_config.yaml
@@ -1205,6 +1205,18 @@ secret_configs:
     name: cluster-secrets-gcp-qe
     namespace: ci
 - from:
+    ci-xpn.json:
+      field: ci-xpn-sa-credentials.json
+      item: gcp-openshift-gce-devel-ci
+    gce.json:
+      field: ci-provisioner-sa-credentials.json
+      item: gcp-openshift-gce-devel-ci
+    insights-live.yaml:
+      field: insights-live.yaml
+      item: insights-ci-account
+    ops-mirror.pem:
+      field: cert-key.pem
+      item: mirror.openshift.com
     pull-secret:
       dockerconfigJSON:
       - auth_field: token_image-puller_app.ci_reg_auth_value.txt
@@ -1226,6 +1238,21 @@ secret_configs:
         email_field: email
         item: registry.redhat.io-pull-secret
         registry_url: registry.redhat.io
+    repository-credentials-password:
+      field: password
+      item: mirror.openshift.com
+    repository-credentials-username:
+      field: username
+      item: mirror.openshift.com
+    ssh-privatekey:
+      field: ssh-privatekey
+      item: gcp-openshift-gce-devel-ci
+    ssh-publickey:
+      field: ssh-publickey
+      item: gcp-openshift-gce-devel-ci
+    telemeter-token:
+      field: telemeter-token
+      item: telemeter
   to:
   - cluster_groups:
     - non_app_ci
