Add rhods operator

--- a/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-operator-ocp4.13-lp-interop.yaml
+++ b/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-operator-ocp4.13-lp-interop.yaml
@@ -28,7 +28,7 @@ resources:
       cpu: 200m
       memory: 200Mi
 tests:
-- as: rosa-sts-test-operator
+- as: rosa-sts-rhods-test-operator
   steps:
     cluster_profile: aws-cspi-qe
     env:
@@ -46,6 +46,7 @@ tests:
       FIREWATCH_DEFAULT_JIRA_PROJECT: LPTOCPCI
       FIREWATCH_JIRA_SERVER: https://issues.redhat.com
       OPENSHIFT_VERSION: "4.13"
+      OPERATOR1_CONFIG: name=rhods-operator;namespace=redhat-ods-operator
       S3_BUCKET_NAME: openshift-cli-installer
       S3_BUCKET_PATH: openshift-ci
     workflow: operator
