--- a/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-rhods-operator-4.13-lp-rosa.yaml
+++ b/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-rhods-operator-4.13-lp-rosa.yaml
@@ -54,4 +54,4 @@ zz_generated_metadata:
   branch: main
   org: rhpit
   repo: interop-tests
-  variant: rosa-sts-test-operator-ocp4.13-lp-interop
+  variant: rosa-sts-test-rhods-operator-4.13-lp-rosa
