--- a/ci-operator/jobs/rhpit/interop-tests/rhpit-interop-tests-main-presubmits.yaml
+++ b/ci-operator/jobs/rhpit/interop-tests/rhpit-interop-tests-main-presubmits.yaml
@@ -942,19 +942,19 @@ presubmits:
     - ^main$
     - ^main-
     cluster: build03
-    context: ci/prow/rosa-sts-test-operator-ocp4.13-lp-interop-rosa-sts-rhods-test-operator
+    context: ci/prow/rosa-sts-test-rhods-operator-4.13-lp-rosa-rosa-sts-rhods-test-operator
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
       ci-operator.openshift.io/cloud: aws
       ci-operator.openshift.io/cloud-cluster-profile: aws-cspi-qe
-      ci-operator.openshift.io/variant: rosa-sts-test-operator-ocp4.13-lp-interop
+      ci-operator.openshift.io/variant: rosa-sts-test-rhods-operator-4.13-lp-rosa
       ci.openshift.io/generator: prowgen
       job-release: "4.13"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-rhpit-interop-tests-main-rosa-sts-test-operator-ocp4.13-lp-interop-rosa-sts-rhods-test-operator
-    rerun_command: /test rosa-sts-test-operator-ocp4.13-lp-interop-rosa-sts-rhods-test-operator
+    name: pull-ci-rhpit-interop-tests-main-rosa-sts-test-rhods-operator-4.13-lp-rosa-rosa-sts-rhods-test-operator
+    rerun_command: /test rosa-sts-test-rhods-operator-4.13-lp-rosa-rosa-sts-rhods-test-operator
     spec:
       containers:
       - args:
@@ -965,7 +965,7 @@ presubmits:
         - --secret-dir=/secrets/ci-pull-credentials
         - --secret-dir=/usr/local/rosa-sts-rhods-test-operator-cluster-profile
         - --target=rosa-sts-rhods-test-operator
-        - --variant=rosa-sts-test-operator-ocp4.13-lp-interop
+        - --variant=rosa-sts-test-rhods-operator-4.13-lp-rosa
         command:
         - ci-operator
         image: ci-operator:latest
@@ -1012,4 +1012,4 @@ presubmits:
       - name: result-aggregator
         secret:
           secretName: result-aggregator
-    trigger: (?m)^/test( | .* )rosa-sts-test-operator-ocp4.13-lp-interop-rosa-sts-rhods-test-operator,?($|\s.*)
+    trigger: (?m)^/test( | .* )rosa-sts-test-rhods-operator-4.13-lp-rosa-rosa-sts-rhods-test-operator,?($|\s.*)
