Ensure gp3-csi is used for etcd during kubevirt platform conformance testing
Signed-off-by: David Vossel <davidvossel@gmail.com>

--- a/ci-operator/step-registry/hypershift/kubevirt/conformance/hypershift-kubevirt-conformance-workflow.yaml
+++ b/ci-operator/step-registry/hypershift/kubevirt/conformance/hypershift-kubevirt-conformance-workflow.yaml
@@ -22,6 +22,7 @@ workflow:
       COMPUTE_NODE_TYPE: c5n.metal
       CONTROL_PLANE_INSTANCE_TYPE: "m6i.2xlarge"
       ZONES_COUNT: "3"
+      ETCD_STORAGE_CLASS: gp3-csi
     pre:
     - chain: ipi-aws-ovn-pre
     - chain: ipi-install
