--- a/ci-operator/step-registry/hypershift/mce/ibmz/create/zvsi-compute/hypershift-mce-ibmz-create-zvsi-compute-ref.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/create/zvsi-compute/hypershift-mce-ibmz-create-zvsi-compute-ref.yaml
@@ -18,12 +18,12 @@ ref:
       default: /etc/hypershift-agent-ibmz-credentials
   commands: hypershift-mce-ibmz-create-zvsi-compute-commands.sh
   from: dev-scripts
-  grace_period: 15m0s
+  grace_period: 30m0s
   resources:
     requests:
       cpu: 100m
       memory: 100Mi
-  timeout: 1h
+  timeout: 1h30m
   credentials:
     - mount_path: /etc/hypershift-agent-ibmz-credentials
       name: hypershift-agent-ibmz-credentials
