KMM: use a publicly available RHEL9 repo file

--- a/ci-operator/config/rh-ecosystem-edge/kernel-module-management/rh-ecosystem-edge-kernel-module-management-main.yaml
+++ b/ci-operator/config/rh-ecosystem-edge/kernel-module-management/rh-ecosystem-edge-kernel-module-management-main.yaml
@@ -41,7 +41,7 @@ images:
 - dockerfile_literal: |
     FROM ubi9-minimal
     RUN rm -rf /etc/yum.repos.d/*
-    RUN curl http://base-4-13-rhel9.ocp.svc > /etc/yum.repos.d/base-4-13-rhel9.repo
+    RUN curl https://github.com/openshift/release/blob/master/core-services/release-controller/_repos/ocp-4.13-rhel9.repo > /etc/yum.repos.d/base-4-13-rhel9.repo
   to: ubi9-minimal-entitled
 - dockerfile_literal: |
     FROM src
