Trying candidate channel

--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -17,7 +17,7 @@ releases:
       version: "4.13"
   latest:
     release:
-      channel: fast
+      channel: candidate
       version: "4.13"
 resources:
   '*':
