Test chrome and chromedriver

--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
@@ -3060,6 +3060,19 @@ tests:
     test:
     - chain: openshift-e2e-test-qe-ui
     workflow: cucushift-installer-rehearse-gcp-upi
+- as: gcp-upi-f28-ui-for-debug
+  cron: 8 6 2 * *
+  steps:
+    cluster_profile: gcp-qe
+    env:
+      E2E_RUN_TAGS: '@amd64 and @gcp-upi and @network-ovnkubernetes and not @fips
+        and @console'
+      TAG_VERSION: '@4.14'
+    test:
+    - ref: idp-htpasswd
+    - ref: cucushift-pre
+    - ref: cucushift-e2e-devel
+    workflow: cucushift-installer-rehearse-gcp-upi
 - as: gcp-upi-f28
   cron: 21 7 14 * *
   steps:
