--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly-4.14-upgrade-from-eus-4.12.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly-4.14-upgrade-from-eus-4.12.yaml
@@ -71,6 +71,7 @@ tests:
         NETWORK_TYPE=OVNKubernetes
       E2E_RUN_INTERMEDIATE_TAGS: '@4.13 and @baremetal-ipi and @upgrade-sanity'
       E2E_RUN_LATEST_TAGS: '@4.14 and @baremetal-ipi and @upgrade-sanity'
+      KEEP_DURATION: 24h
       UPGRADE_CHECK_RUN_TAGS: '@upgrade-check and @4.12 and @baremetal-ipi'
       UPGRADE_PRE_RUN_TAGS: '@upgrade-prepare and @4.12 and @baremetal-ipi'
     test:
