--- a/ci-operator/step-registry/openshift/upgrade/qe/test/paused/openshift-upgrade-qe-test-paused-chain.yaml
+++ b/ci-operator/step-registry/openshift/upgrade/qe/test/paused/openshift-upgrade-qe-test-paused-chain.yaml
@@ -15,6 +15,7 @@ chain:
   - ref: cucushift-upgrade-healthcheck
   - ref: openshift-extended-upgrade-post
   - ref: cucushift-upgrade-check
+  - ref: cucushift-hypershift-extended-debug    
   - ref: cucushift-upgrade-report
   documentation: |-
     The chain executes upgrade-prepare, which creates test data on a cluster;
