add to unisntall

--- a/ci-operator/step-registry/cluster/uninstall/cluster-uninstall-ref.yaml
+++ b/ci-operator/step-registry/cluster/uninstall/cluster-uninstall-ref.yaml
@@ -23,6 +23,14 @@ ref:
     - name: CLUSTERS_RUN_IN_PARALLEL
       default: "true"
       documentation: To run cluster destroy in parallel, set to "true" else set to "false"
+    - name: GCP_SERVICE_ACCOUNT_NAME
+      default: ""
+      documentation: >-
+        Name of GCP service account json secret.  
+            To create the secret json, create a service account and download it:  
+            1. Go to https://console.cloud.google.com/iam-admin/serviceaccounts?project=<project>
+            2. Select the service account -> "Create Key"
+            3. Select the Key Type as `JSON` and click Create
   documentation: >-
     This step uninstalls cluster(s) which were provisined using `cluster-install` workflow. 
     cluster-profile: 
