Adding debug commands for destroy and create chain

--- a/ci-operator/step-registry/hypershift/mce/ibmz/create/hypershift-mce-ibmz-create-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/create/hypershift-mce-ibmz-create-chain.yaml
@@ -15,6 +15,6 @@ chain:
       documentation: "The number of ibmz nodes to join the agent cluster"
   steps:
     - ref: hypershift-mce-ibmz-create-hcp
-    - ref: hypershift-mce-ibmz-create-zvsi-compute
+    - ref: hypershift-mce-ibmz-create-zvsicompute
   documentation: |-
-    hypershift-mce-ibmz-create chain provisions both hosted control plane with multi architecture and and zVSI compute nodes of s390x architecture serailly.
+    hypershift-mce-ibmz-create chain provisions both hosted control plane with multi architecture and zVSI compute nodes of s390x architecture with VPC infrastructure serially.
