[Debug] Debug 62690 case

--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
@@ -2696,6 +2696,7 @@ tests:
       TAG_VERSION: '@4.14'
       TEST_ADDITIONAL: Network_Observability
     test:
+    - ref: wait
     - chain: openshift-e2e-test-qe-destructive
     workflow: cucushift-installer-rehearse-gcp-ipi-workers-marketplace
 - as: gcp-ipi-minimal-permission-custom-type-f28
