--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
@@ -3412,7 +3412,7 @@ tests:
 - as: vsphere-8-ipi-ovn-etcd-encryption-f14
   cron: 41 6 8,23 * *
   steps:
-    cluster_profile: vsphere-8
+    cluster_profile: vsphere-8-vpn
     env:
       E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @network-ovnkubernetes and not @fips'
       TAG_VERSION: '@4.14'
@@ -3422,7 +3422,7 @@ tests:
 - as: vsphere-8-upi-f14
   cron: 38 13 3,18 * *
   steps:
-    cluster_profile: vsphere-8
+    cluster_profile: vsphere-8-vpn
     env:
       E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @network-ovnkubernetes and not @fips'
       TAG_VERSION: '@4.14'
@@ -3511,7 +3511,7 @@ tests:
 - as: vsphere-8-agent-compact-f14
   cron: 14 11 2,17 * *
   steps:
-    cluster_profile: vsphere-8
+    cluster_profile: vsphere-8-vpn
     env:
       E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @network-ovnkubernetes and not @fips'
       TAG_VERSION: '@4.14'
@@ -3521,7 +3521,7 @@ tests:
 - as: vsphere-8-agent-ha-f14
   cron: 8 5 13,28 * *
   steps:
-    cluster_profile: vsphere-8
+    cluster_profile: vsphere-8-vpn
     env:
       E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @network-ovnkubernetes and not @fips'
       TAG_VERSION: '@4.14'
@@ -3531,7 +3531,7 @@ tests:
 - as: vsphere-8-agent-sno-f14
   cron: 57 6 3,18 * *
   steps:
-    cluster_profile: vsphere-8
+    cluster_profile: vsphere-8-vpn
     env:
       E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @network-ovnkubernetes and @singlenode
         and not @fips'
