--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.15__amd64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.15__amd64-nightly.yaml
@@ -3412,7 +3412,7 @@ tests:
 - as: vsphere-8-ipi-ovn-etcd-encryption-f14
   cron: 11 18 1,16 * *
   steps:
-    cluster_profile: vsphere-8
+    cluster_profile: vsphere-8-vpn
     env:
       E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @network-ovnkubernetes and not @fips'
       TAG_VERSION: '@4.15'
@@ -3422,7 +3422,7 @@ tests:
 - as: vsphere-8-upi-f14
   cron: 48 10 7,22 * *
   steps:
-    cluster_profile: vsphere-8
+    cluster_profile: vsphere-8-vpn
     env:
       E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @network-ovnkubernetes and not @fips'
       TAG_VERSION: '@4.15'
@@ -3511,7 +3511,7 @@ tests:
 - as: vsphere-8-agent-compact-f14
   cron: 1 6 8,23 * *
   steps:
-    cluster_profile: vsphere-8
+    cluster_profile: vsphere-8-vpn
     env:
       E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @network-ovnkubernetes and not @fips'
       TAG_VERSION: '@4.15'
@@ -3521,7 +3521,7 @@ tests:
 - as: vsphere-8-agent-ha-f14
   cron: 17 23 5,20 * *
   steps:
-    cluster_profile: vsphere-8
+    cluster_profile: vsphere-8-vpn
     env:
       E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @network-ovnkubernetes and not @fips'
       TAG_VERSION: '@4.15'
@@ -3531,7 +3531,7 @@ tests:
 - as: vsphere-8-agent-sno-f14
   cron: 48 9 5,20 * *
   steps:
-    cluster_profile: vsphere-8
+    cluster_profile: vsphere-8-vpn
     env:
       E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @network-ovnkubernetes and @singlenode
         and not @fips'
