Update Cluster Name Prefix

--- a/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-rhods-operator-4.13-lp-rosa.yaml
+++ b/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-rhods-operator-4.13-lp-rosa.yaml
@@ -36,7 +36,7 @@ tests:
   steps:
     cluster_profile: aws-cspi-qe
     env:
-      CLUSTER_NAME_PREFIX: rosa
+      CLUSTER_NAME_PREFIX: rosa-rhods
       CLUSTER1_CONFIG: platform=rosa;region=us-east-2;version=4.13;channel-group=stable;compute-machine-type=m5.4xlarge;timeout=90m;replicas=6;ocm-env=stage
       FIREWATCH_CONFIG: |
         [
