Allow openshift-tracing to access qe-private-deck

--- a/core-services/sync-rover-groups/_config.yaml
+++ b/core-services/sync-rover-groups/_config.yaml
@@ -96,6 +96,9 @@ groups:
   product-security-secure-development:
     clusters:
     - app.ci
+  openshift-tracing:
+    clusters:
+    - app.ci
   quay-admins:
     clusters:
     - app.ci
