--- a/ci-operator/jobs/stackrox/stackrox/stackrox-stackrox-nightlies-postsubmits.yaml
+++ b/ci-operator/jobs/stackrox/stackrox/stackrox-stackrox-nightlies-postsubmits.yaml
@@ -1672,6 +1672,7 @@ postsubmits:
     always_run: true
     branches:
     - ^nightlies$
+    cluster: build02
     decorate: true
     decoration_config:
       skip_cloning: true
@@ -1733,6 +1734,7 @@ postsubmits:
     always_run: true
     branches:
     - ^nightlies$
+    cluster: build02
     decorate: true
     decoration_config:
       skip_cloning: true
@@ -1809,6 +1811,7 @@ postsubmits:
     always_run: true
     branches:
     - ^nightlies$
+    cluster: build02
     decorate: true
     decoration_config:
       skip_cloning: true
@@ -1870,6 +1873,7 @@ postsubmits:
     always_run: true
     branches:
     - ^nightlies$
+    cluster: build02
     decorate: true
     decoration_config:
       skip_cloning: true
@@ -1931,6 +1935,7 @@ postsubmits:
     always_run: true
     branches:
     - ^nightlies$
+    cluster: build02
     decorate: true
     decoration_config:
       skip_cloning: true
@@ -1992,6 +1997,7 @@ postsubmits:
     always_run: true
     branches:
     - ^nightlies$
+    cluster: build02
     decorate: true
     decoration_config:
       skip_cloning: true
