Add support of PowerVS on hypershift-hosted
Signed-off-by: Neha Yadav <neha.yadav3@ibm.com>

--- a/ci-operator/step-registry/hypershift/hostedcluster/workflow/hypershift-hostedcluster-workflow-workflow.yaml
+++ b/ci-operator/step-registry/hypershift/hostedcluster/workflow/hypershift-hostedcluster-workflow-workflow.yaml
@@ -17,6 +17,6 @@ workflow:
     pre:
     - ref: openshift-cluster-bot-rbac
     - chain: hypershift-hostedcluster-create
-    post:
-    - chain: hypershift-hostedcluster-dump
-    - chain: hypershift-hostedcluster-destroy
+   # post:
+   # - chain: hypershift-hostedcluster-dump
+   # - chain: hypershift-hostedcluster-destroy
