--- a/ci-operator/step-registry/hypershift/hostedcluster/destroy/hostedcluster/hypershift-hostedcluster-destroy-hostedcluster-ref.yaml
+++ b/ci-operator/step-registry/hypershift/hostedcluster/destroy/hostedcluster/hypershift-hostedcluster-destroy-hostedcluster-ref.yaml
@@ -12,6 +12,33 @@ ref:
   - name: HYPERSHIFT_GUEST_INFRA_OCP_ACCOUNT
     default: "false"
     documentation: "Whether to use the generic CI account or the HyperShift OSD account for the guest clusters infra. For the infra created for the clusters. E.g. For cluster-bot we use the generic CI account"
+  - name: POWERVS_BASE_DOMAIN
+    default: ""
+    documentation: "A fully-qualified PowerVS domain or subdomain name."
+  - name: POWERVS_REGION
+    default: ""
+    documentation: "The PowerVS region of the cluster."
+  - name: POWERVS_ZONE
+    default: ""
+    documentation: "The PowerVS zone of the cluster."
+  - name: POWERVS_VPC_REGION
+    default: ""
+    documentation: "The region of the VPC created for PowerVS deployment"
+  - name: POWERVS_RESOURCE_GROUP
+    default: ""
+    documentation: "The PowerVS resource group."
+  - name: POWERVS_GUID
+    default: ""
+    documentation: "IBM Cloud PowerVS Service Instance ID.This flag is used to reuse an existing PowerVS Service Instance resource for cluster's infra"
+  - name: VPC
+    default: ""
+    documentation: "IBM Cloud VPC Name. This flag is used to reuse an existing VPC resource for cluster's infra"
+  - name: CLOUD_CONNECTION
+    default: ""
+    documentation: "Cloud Connection in given zone.This flag is used to reuse an existing Cloud Connection resource for cluster's infra"
+  - name: IBMCLOUD_CREDENTIALS
+    default: ""
+    documentation: "Path to IBM Cloud credentials"
   commands: hypershift-hostedcluster-destroy-hostedcluster-commands.sh
   from_image:
     namespace: ci
@@ -26,6 +53,9 @@ ref:
   credentials:
   - mount_path: /etc/hypershift-ci-jobs-awscreds
     name: hypershift-ci-jobs-awscreds
+    namespace: test-credentials
+  - mount_path: /etc/hypershift-pool-powervs-credentials
+    name: hypershift-pool-powervs-credentials
     namespace: test-credentials
   - mount_path: /var/run/hypershift-workload-credentials
     name: hypershift-workload-credentials
