Removing branch protection from Securesign trillian branches

--- a/core-services/prow/02_config/securesign/trillian/_prowconfig.yaml
+++ b/core-services/prow/02_config/securesign/trillian/_prowconfig.yaml
@@ -1,3 +1,13 @@
+branch-protection:
+  orgs:
+    securesign:
+      repos:
+        trillian:
+          branches:
+            release-next:
+              protect: false
+            redhat-v1.5.2:
+              protect: false
 tide:
   queries:
   - labels:
